<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageview_profile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/profile_pic" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:layout_below="@id/imageview_profile"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:id="@+id/menu_myProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/username"
        android:layout_marginTop="50dp"
        >

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_person"
            android:layout_marginStart="90dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_myProfile"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_updates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/menu_myProfile"
        android:layout_marginTop="20dp"
        >

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_updates"
            android:layout_marginStart="90dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_updates"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/menu_updates"
        android:layout_marginTop="20dp"
        >

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_notification"
            android:layout_marginStart="90dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_notifications"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/menu_notifications"
        android:layout_marginTop="20dp"
        >

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_search"
            android:layout_marginStart="90dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_search"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/menu_search"
        android:layout_marginTop="20dp"
        >

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_settings"
            android:layout_marginStart="90dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_settings"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/button_signout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="Sign Out" />

</RelativeLayout>